= Release Notes

== Version 2.3.2
* config server: fixed a race condition when accessing server state.
  HTTP requests run in threads separate from the server dispatcher
  thread and thus can cause race conditions/crashes when accessing
  server state. Solved this by adding a closure evaluator to the
  dispatcher.

== Version 2.3.1
* updated amqp and amq-protocol requirements in ruby client.
* fixed that a change in consul endpoint was not properly handled by
  the beetle configuration client.

== Version 2.3.0
* redis failover: support multiple redis failover instances. This has
  required a change in the redis master file format. The master file
  content is now either the old format (host:port) for systems using a
  single redis failover system or a mapping from system names to
  host:port combinations. For example,
  "system1/master1:6379\nsystem2/master" specifies to systems with
  their corresponding redis masters. Beetle client uses the configured
  system name to tind the master it should use.
* support lazy queues: setting :lazy_quques_enabled on the beetle
  cofiguration will enable queue_mode: "lazy" for all queues of
  declared on the beetle client.
* improved calculation of channel close an connection disconnect
  timeouts for beetle publisher to avoid warnings in RabbitMQ logs.
* use SecureRandom.uuid instead of UUID4R::uuid(4) if UUID4R cannot
  be loaded.

== Version 2.2.4
* redis failover: prevent starting a new master switch while one is running

== Version 2.2.3
* redis failover: server logs errors when redis oparations fail

== Version 2.2.2

* Reset redis configuration server state when master becomes available during
  pinging or invalidating.  Unlike the former ruby implementation, the go code
  continues checking redis availability during pinging or invalidating. However,
  the code did not reset state properly, leading the UI to display 'switch in
  progress' when in fact there wasn't.

== Version 2.2.1