@@ -308,6 +308,13 @@ module Beetle
       assert_equal "ha!", client.purge(:queue1, :queue2)
     end
 
+    test "should delegate queue setup to the publisher instance" do
+      client = Client.new
+      client.register_queue(:queue)
+      client.send(:publisher).expects(:setup_all_queues_and_policies).with(["queue"]).returns("ha!")
+      assert_equal "ha!", client.setup_all_queues_and_policies
+    end
+
     test "should delegate rpc calls to the publisher instance" do
       client = Client.new
       client.register_message("deadletter")
